[package]
name = "multithreading"
version = "0.1.0"
edition = "2021"
description = "A simple multithreading library in Rust"
authors = ["LOSEARDES77"]
license = "MIT"
repository = "https://github.com/LOSEARDES77/multithreading-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
