[package]
name = "multithreading"
version = "0.1.4"
edition = "2021"
description = "A simple multithreading library in Rust"
authors = ["LOSEARDES77"]
license = "MIT"
repository = "https://github.com/LOSEARDES77/multithreading-rs"
readme = "README.md"
keywords = ["thread", "multithread", "cpus", "cpu", "process"]
categories = ["concurrency"]


[dependencies]
num_cpus = "1.16.0"
